Restored code block that prevented workspaces flickering

--- a/chrome.css
+++ b/chrome.css
@@ -68,6 +68,11 @@ not (-moz-bool-pref: "zen.view.use-single-toolbar") {
         }
       }
 
+      /*Necessary to prevent the mouse from unhovering while still in the sidebar*/
+      #navigator-toolbox:hover {
+      -moz-window-dragging: no-drag; /* Disables window dragging */
+      }
+
       /*Elements with "Instant" transitions. These are delayed dynamically depending on if it's hover/unhover, and are never animated to improve performance.*/
       @media (-moz-pref("mod.autoexpand.performance_mode", "fancy")) {
         #zen-media-controls-toolbar, #zen-appcontent-wrapper,
